[gd_scene load_steps=10 format=3 uid="uid://c1t0g4drcdvc8"]

[ext_resource type="PackedScene" uid="uid://b8f0525h0nbcc" path="res://entities/npcs/npc_template.tscn" id="1_mi6um"]
[ext_resource type="Script" path="res://entities/npcs/lizard_folk.gd" id="2_0pi0v"]
[ext_resource type="SpriteFrames" uid="uid://bpn3md7auqdkg" path="res://entities/npcs/lizard_animation.tres" id="2_qjpm4"]
[ext_resource type="PackedScene" uid="uid://25nrwtgtyk0t" path="res://states/enemy_wander.tscn" id="3_iulgi"]
[ext_resource type="Script" path="res://entities/components/hurtbox_component.gd" id="4_2agxx"]
[ext_resource type="PackedScene" uid="uid://dg0lj5hsoqr1m" path="res://states/enemy_idle.tscn" id="4_ipxq3"]
[ext_resource type="PackedScene" uid="uid://bav4o5nc8egpp" path="res://states/enemy_follow.tscn" id="5_el802"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nlkex"]
radius = 4.0
height = 12.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kptmw"]
radius = 5.0
height = 14.0

[node name="LizardFolk" instance=ExtResource("1_mi6um")]
collision_layer = 2
collision_mask = 0
script = ExtResource("2_0pi0v")

[node name="AnimatedSprite2D" parent="." index="0"]
sprite_frames = ExtResource("2_qjpm4")
animation = &"idle_down"

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2(0, 7)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_nlkex")

[node name="HurtboxComponent" parent="." index="4"]
collision_layer = 2
collision_mask = 0
script = ExtResource("4_2agxx")

[node name="CollisionShape2D" parent="HurtboxComponent" index="0"]
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_kptmw")

[node name="StateMachine" parent="." index="5" node_paths=PackedStringArray("initial_state")]
initial_state = NodePath("EnemyWander")

[node name="EnemyWander" parent="StateMachine" index="0" node_paths=PackedStringArray("enemy") instance=ExtResource("3_iulgi")]
enemy = NodePath("../..")

[node name="EnemyIdle" parent="StateMachine" index="1" node_paths=PackedStringArray("enemy") instance=ExtResource("4_ipxq3")]
enemy = NodePath("../..")

[node name="EnemyFollow" parent="StateMachine" index="2" node_paths=PackedStringArray("enemy") instance=ExtResource("5_el802")]
enemy = NodePath("../..")

[editable path="HurtboxComponent"]
